; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_compile_attach_shader.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_compile_attach_shader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra = type { i32 }
%struct.TYPE_3__ = type { i32 (i32)*, i32 (i32, i32)*, i32 (i32, i32, i32*, i8*)*, i32 (i32, i32, i32*)*, i32 (i32, i32, i32*, i8*)*, i32 (i32)*, i32 (i32, i32, i8**, i32*)*, i32 (i32)* }

@GL_COMPILE_STATUS = common dso_local global i32 0, align 4
@GL_INFO_LOG_LENGTH = common dso_local global i32 0, align 4
@MSGL_V = common dso_local global i32 0, align 4
@MSGL_DEBUG = common dso_local global i32 0, align 4
@MSGL_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"%s shader source:\0A\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"%s shader compile log (status=%d):\0A%s\0A\00", align 1
@GL_TRANSLATED_SHADER_SOURCE_LENGTH_ANGLE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [20 x i8] c"Translated shader:\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ra*, i32, i32, i8*, i32*)* @compile_attach_shader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @compile_attach_shader(%struct.ra* %0, i32 %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca %struct.ra*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_3__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  store %struct.ra* %0, %struct.ra** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  %20 = load %struct.ra*, %struct.ra** %6, align 8
  %21 = call %struct.TYPE_3__* @ra_gl_get(%struct.ra* %20)
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %11, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 7
  %24 = load i32 (i32)*, i32 (i32)** %23, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 %24(i32 %25)
  store i32 %26, i32* %12, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 6
  %29 = load i32 (i32, i32, i8**, i32*)*, i32 (i32, i32, i8**, i32*)** %28, align 8
  %30 = load i32, i32* %12, align 4
  %31 = call i32 %29(i32 %30, i32 1, i8** %9, i32* null)
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 5
  %34 = load i32 (i32)*, i32 (i32)** %33, align 8
  %35 = load i32, i32* %12, align 4
  %36 = call i32 %34(i32 %35)
  store i32 0, i32* %13, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 3
  %39 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %38, align 8
  %40 = load i32, i32* %12, align 4
  %41 = load i32, i32* @GL_COMPILE_STATUS, align 4
  %42 = call i32 %39(i32 %40, i32 %41, i32* %13)
  store i32 0, i32* %14, align 4
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 3
  %45 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %44, align 8
  %46 = load i32, i32* %12, align 4
  %47 = load i32, i32* @GL_INFO_LOG_LENGTH, align 4
  %48 = call i32 %45(i32 %46, i32 %47, i32* %14)
  %49 = load i32, i32* %13, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %60

51:                                               ; preds = %5
  %52 = load i32, i32* %14, align 4
  %53 = icmp sgt i32 %52, 1
  br i1 %53, label %54, label %56

54:                                               ; preds = %51
  %55 = load i32, i32* @MSGL_V, align 4
  br label %58

56:                                               ; preds = %51
  %57 = load i32, i32* @MSGL_DEBUG, align 4
  br label %58

58:                                               ; preds = %56, %54
  %59 = phi i32 [ %55, %54 ], [ %57, %56 ]
  br label %62

60:                                               ; preds = %5
  %61 = load i32, i32* @MSGL_ERR, align 4
  br label %62

62:                                               ; preds = %60, %58
  %63 = phi i32 [ %59, %58 ], [ %61, %60 ]
  store i32 %63, i32* %15, align 4
  %64 = load i32, i32* %8, align 4
  %65 = call i8* @shader_typestr(i32 %64)
  store i8* %65, i8** %16, align 8
  %66 = load %struct.ra*, %struct.ra** %6, align 8
  %67 = getelementptr inbounds %struct.ra, %struct.ra* %66, i32 0, i32 0
  %68 = load i32, i32* %67, align 4
  %69 = load i32, i32* %15, align 4
  %70 = call i64 @mp_msg_test(i32 %68, i32 %69)
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %83

72:                                               ; preds = %62
  %73 = load %struct.ra*, %struct.ra** %6, align 8
  %74 = load i32, i32* %15, align 4
  %75 = load i8*, i8** %16, align 8
  %76 = call i32 (%struct.ra*, i32, i8*, i8*, ...) @MP_MSG(%struct.ra* %73, i32 %74, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %75)
  %77 = load %struct.ra*, %struct.ra** %6, align 8
  %78 = getelementptr inbounds %struct.ra, %struct.ra* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = load i32, i32* %15, align 4
  %81 = load i8*, i8** %9, align 8
  %82 = call i32 @mp_log_source(i32 %79, i32 %80, i8* %81)
  br label %83

83:                                               ; preds = %72, %62
  %84 = load i32, i32* %14, align 4
  %85 = icmp sgt i32 %84, 1
  br i1 %85, label %86, label %105

86:                                               ; preds = %83
  %87 = load i32, i32* %14, align 4
  %88 = add nsw i32 %87, 1
  %89 = call i8* @talloc_zero_size(i32* null, i32 %88)
  store i8* %89, i8** %17, align 8
  %90 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %91 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %90, i32 0, i32 4
  %92 = load i32 (i32, i32, i32*, i8*)*, i32 (i32, i32, i32*, i8*)** %91, align 8
  %93 = load i32, i32* %12, align 4
  %94 = load i32, i32* %14, align 4
  %95 = load i8*, i8** %17, align 8
  %96 = call i32 %92(i32 %93, i32 %94, i32* null, i8* %95)
  %97 = load %struct.ra*, %struct.ra** %6, align 8
  %98 = load i32, i32* %15, align 4
  %99 = load i8*, i8** %16, align 8
  %100 = load i32, i32* %13, align 4
  %101 = load i8*, i8** %17, align 8
  %102 = call i32 (%struct.ra*, i32, i8*, i8*, ...) @MP_MSG(%struct.ra* %97, i32 %98, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i8* %99, i32 %100, i8* %101)
  %103 = load i8*, i8** %17, align 8
  %104 = call i32 @talloc_free(i8* %103)
  br label %105

105:                                              ; preds = %86, %83
  %106 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %107 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %106, i32 0, i32 2
  %108 = load i32 (i32, i32, i32*, i8*)*, i32 (i32, i32, i32*, i8*)** %107, align 8
  %109 = icmp ne i32 (i32, i32, i32*, i8*)* %108, null
  br i1 %109, label %110, label %146

110:                                              ; preds = %105
  %111 = load %struct.ra*, %struct.ra** %6, align 8
  %112 = getelementptr inbounds %struct.ra, %struct.ra* %111, i32 0, i32 0
  %113 = load i32, i32* %112, align 4
  %114 = load i32, i32* @MSGL_DEBUG, align 4
  %115 = call i64 @mp_msg_test(i32 %113, i32 %114)
  %116 = icmp ne i64 %115, 0
  br i1 %116, label %117, label %146

117:                                              ; preds = %110
  store i32 0, i32* %18, align 4
  %118 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %119 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %118, i32 0, i32 3
  %120 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %119, align 8
  %121 = load i32, i32* %12, align 4
  %122 = load i32, i32* @GL_TRANSLATED_SHADER_SOURCE_LENGTH_ANGLE, align 4
  %123 = call i32 %120(i32 %121, i32 %122, i32* %18)
  %124 = load i32, i32* %18, align 4
  %125 = icmp sgt i32 %124, 0
  br i1 %125, label %126, label %145

126:                                              ; preds = %117
  %127 = load i32, i32* %18, align 4
  %128 = add nsw i32 %127, 1
  %129 = call i8* @talloc_zero_size(i32* null, i32 %128)
  store i8* %129, i8** %19, align 8
  %130 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %131 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %130, i32 0, i32 2
  %132 = load i32 (i32, i32, i32*, i8*)*, i32 (i32, i32, i32*, i8*)** %131, align 8
  %133 = load i32, i32* %12, align 4
  %134 = load i32, i32* %18, align 4
  %135 = load i8*, i8** %19, align 8
  %136 = call i32 %132(i32 %133, i32 %134, i32* null, i8* %135)
  %137 = load %struct.ra*, %struct.ra** %6, align 8
  %138 = call i32 @MP_DBG(%struct.ra* %137, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0))
  %139 = load %struct.ra*, %struct.ra** %6, align 8
  %140 = getelementptr inbounds %struct.ra, %struct.ra* %139, i32 0, i32 0
  %141 = load i32, i32* %140, align 4
  %142 = load i32, i32* @MSGL_DEBUG, align 4
  %143 = load i8*, i8** %19, align 8
  %144 = call i32 @mp_log_source(i32 %141, i32 %142, i8* %143)
  br label %145

145:                                              ; preds = %126, %117
  br label %146

146:                                              ; preds = %145, %110, %105
  %147 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %148 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %147, i32 0, i32 1
  %149 = load i32 (i32, i32)*, i32 (i32, i32)** %148, align 8
  %150 = load i32, i32* %7, align 4
  %151 = load i32, i32* %12, align 4
  %152 = call i32 %149(i32 %150, i32 %151)
  %153 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %154 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %153, i32 0, i32 0
  %155 = load i32 (i32)*, i32 (i32)** %154, align 8
  %156 = load i32, i32* %12, align 4
  %157 = call i32 %155(i32 %156)
  %158 = load i32, i32* %13, align 4
  %159 = load i32*, i32** %10, align 8
  %160 = load i32, i32* %159, align 4
  %161 = and i32 %160, %158
  store i32 %161, i32* %159, align 4
  ret void
}

declare dso_local %struct.TYPE_3__* @ra_gl_get(%struct.ra*) #1

declare dso_local i8* @shader_typestr(i32) #1

declare dso_local i64 @mp_msg_test(i32, i32) #1

declare dso_local i32 @MP_MSG(%struct.ra*, i32, i8*, i8*, ...) #1

declare dso_local i32 @mp_log_source(i32, i32, i8*) #1

declare dso_local i8* @talloc_zero_size(i32*, i32) #1

declare dso_local i32 @talloc_free(i8*) #1

declare dso_local i32 @MP_DBG(%struct.ra*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
